#15 ISSUE and #19 ISSUE: Added credits for each picture and reformatted the Home page to make it fit better

--- a/MedsTracker2/app/src/main/res/values/strings.xml
+++ b/MedsTracker2/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
         • Logo Created By Sobhi Houri\n
         • Other images are Public Domain\n
     </string>
+
+    <string name="delete_phone_confirm">Delete this phone card?</string>
+    <string name="delete_drug_confirm">Delete this drug card?</string>
 </resources>
